test/unclosed.st.test
ERROR
Error : unclosed [ at "unclosed.st:1:10"