test/unclosed.st
{! oop! }[forgot to close the body!
